# classfile-parser

./: .gitignore  .travis.yml  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  Readme.md
.claude/agents/: java-language-expert.md  rust-language-architect.md
.github/workflows/: rust.yml
assets/: AllocateClasses.java  BasicClass.java  BasicInterface.java  HelloWorld.java  InterfaceImplementor.java  SimpleMath.java
examples/: compile_patch.rs  jar_explorer.rs  jar_patch.rs
java-assets/: compile.sh
java-assets/src/: AllocateClasses.java  Annotations.java  BasicClass.java  BasicInterface.java  BootstrapMethods.java  DeprecatedAnnotation.java  Factorial.java  InnerClasses.java  Instructions.java  InterfaceImplementor.java  LocalVariableTable.java  SimpleMath.java  UnicodeStrings.java  module-info.java
src/: lib.rs  parser.rs  types.rs
src/attribute_info/: mod.rs  parser.rs  types.rs
src/class_file/: mod.rs  parser.rs
src/code_attribute/: mod.rs  parser.rs  types.rs
src/compile/: codegen.rs  lexer.rs  mod.rs  parser.rs  patch.rs  stack_calc.rs  stackmap.rs
src/constant_info/: mod.rs  parser.rs  types.rs
src/decompile/: cfg.rs  cfg_types.rs  class_decompiler.rs  descriptor.rs  desugar.rs  expr.rs  java_ast.rs  mod.rs  renderer.rs  stack_sim.rs  structured_types.rs  structuring.rs  type_inference.rs  util.rs
src/field_info/: mod.rs  parser.rs  types.rs
tests/: attr_bootstrap_methods.rs  attr_stack_map_table.rs  classfile.rs  code_attribute.rs  decompile.rs  e2e_patch.rs  jar_patch.rs  jar_utils.rs  module_attribute.rs  new_attributes.rs  patching_helpers.rs  spring_utils.rs
(+23 files in other folders)
